Bug 83217 - Reference of cell in source worksheet not updated correctly after moving dependent cell to another worksheet
Summary: Reference of cell in source worksheet not updated correctly after moving depe...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.0.beta1
Hardware: x86 (IA32) All
: high major
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.4.0
Keywords: bibisectRequest, regression
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2014-08-29 03:01 UTC by ign_christian
Modified: 2015-12-17 08:34 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ign_christian 2014-08-29 03:01:14 UTC
I open new bug report since this case not resolved with fixing of Bug 81330 and Bug 82936.

Steps:
1. In cell A1 type: 1
2. In cell A2 type: =A1*2
3. In cell A3 type: =A2*3
4. Hit "+" in the right of 'Sheet1' to create new 'Sheet2'
5. Move by dragging cell A2 in 'Sheet1' to cell A1 in 'Sheet2'

Issue: cell A3 in 'Sheet1' change to: =A1*3

Step 5 also reproduced with cut-paste

Reproduced with LO 4.3.1.2, 4.2.6.3, 4.2.0.0.beta1 under Ubuntu 12.04 x86

Not reproduced with LO 4.1.6.2
Comment 1 marc.polizzi 2014-08-29 08:31:11 UTC
I confirme on 4.3.1.1 on w7
Comment 2 m_a_riosv 2014-08-30 14:08:56 UTC
Reproducible for me in Win7x64 with:
4.2.0.4 Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71
4.2.7.0.0+ Build ID: 539f5b5f7dfc1168c4a6b826bfb18362c80fb424
   TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-08-29_13:56:53
4.3.2.0.0+ Build ID: a5fedcf7fe56a56475dea484a78971c504e52272
   TinderBox: Win-x86@42, Branch:libreoffice-4-3, Time: 2014-08-29_10:16:48
4.4.0.0.alpha0+ Build ID: f5aeaa3845ae794a6320f082b1354f946d96cec1
   TinderBox: Win-x86@42, Branch:master, Time: 2014-08-29_01:36:17

Regression from:
4.1.6.2 Build ID: 40ff705089295be5be0aae9b15123f687c05b0a

The issue is reproducible with drag&drop and with cut&paste.
Seems the dependant formula is adapted but without add the new sheet in the reference.

Added to mab 4.2.
Comment 3 Luke 2014-09-01 03:35:38 UTC
On Win 7 Version: 4.4.0.0.alpha0+
TinderBox: Win-x86@42, Branch:master, Time: 2014-08-30_23:06:34

I cannot reproduce this issue. With both a mouse move and cut-paste to sheet2, I get =Sheet1.A1*2

For those wondering how to drag and drop a single cell in Calc, do this:
1)Select the cell.
2)Drag to select at least one additional cell.
3)Drag back so that only the desired cell is selected. Then the cell can be dragged and dropped.
Comment 4 Luke 2014-09-01 04:09:48 UTC
Sorry overtired and running too many Calc's at once. Disreguard comment 3. In Calc 4.4, A3 is still incorrectly "=A1*3" and NOT "=Sheet2.A1*3"

Should we add a bibisectRequest?
Comment 5 ign_christian 2014-09-01 09:32:22 UTC
> Should we add a bibisectRequest?
Yup..perhaps it helps dev if someone do bisect :)
Comment 6 Kohei Yoshida 2014-09-03 20:57:34 UTC
I'm taking this.
Comment 7 Commit Notification 2014-09-03 20:58:05 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=31abf4ce4e18cf2e94c6e598f255ae7cd8f675fa

fdo#83217: Set 3D flags correctly when moving block of cells.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-09-03 20:58:23 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=41afbdcc624c075888610a049e84a14c548bdaac

fdo#83217: Write test for this.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Kohei Yoshida 2014-09-03 20:58:42 UTC
Fixed.
Comment 10 Kohei Yoshida 2014-09-03 21:33:28 UTC
I tried to backport, but unfortunately the code depends on my previous fix which was not yet backported.  I'm not sure what I'll do with this, but for now the fix is master only.
Comment 11 Robinson Tryon (qubit) 2015-12-17 08:34:16 UTC
Migrating Whiteboard tags to Keywords: (bibisectRequest)
[NinjaEdit]