fdo#83217: Set 3D flags correctly when moving block of cells.

Change-Id: Ibca5ff36f50f2b6fe182b008ead3efcb1c5a0be6